--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
 
   <br />
 
-  <button id="add-database">Add Database</button>
+  <button id="add-database">Add Databasedsklfjadslkfjlasdkjfalsdkjflasdkj</button>
 
   <div id="user-profile">
     You are not logged in
