--- a/src/index.html
+++ b/src/index.html
@@ -125,10 +125,10 @@
   </div>
   </div>
 
-  <div style="margin-top: 170px"> </div>
+  <div style="margin-top: 50px"> </div>
 
   <div class="text-center">
-    <h1 style="font-size: 100px">Ingredientory</h1>
+    <img class="responsive" src="/src/images/Logo.png" alt="" width="1000px" height="300px">
   </div>
 
   <div class="container align-items-center">
