--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,6 @@
 </head>
 
 <body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
-
   <div class="navbar navbar-default navbar-static-top" role="navigation" style=" background-color: rgba(255,255,255,0); border-width: 0;">
   <div class="container">
 
@@ -94,7 +93,7 @@
           </div>
 
           <div class="modal-body">
-            <h1>Sign up for Ingredientory</h1>
+            <h1>Sign up for Ingrdientory</h1>
             <label for="username" style="margin-right: 1%;"><h2 style="font-size:15px;">Email : </h2></label>
               <input type="text" id="email-input-field" name="username" required> <br />
 
@@ -145,6 +144,8 @@
     </form>
 
   </div>
+
+  <script href= "reactstuff.js"></script>
 
 </body>
 </html>
