--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Staatliches&display=swap" rel="stylesheet">
 
+  <link rel="stylesheet" href="/src/style.css">
+
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
+
+
   <div id="root"></div>
+
 </body>
 </html>
