--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,9 @@
   <link href="https://fonts.googleapis.com/css?family=Staatliches&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/src/style.css">
 
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <!-- added this and changed input box --> 
+
 </head>
 
 <body>
