Update recipe cards to get custom images

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head lang="en">
-  <title>Ingredientory - Home</title>
+  <title>Ingredientory</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
